alignment issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,25 +67,25 @@ ul {
 .value-0 {
     top: 351px;
     left: 166px;
-    width: 155px;
+    width: 160px;
 }
 
 .value-1 {
     top: 381px;
-    left: 201px;
-    width: 140px;
+    left: 178px;
+    width: 160px;
 }
 
 .value-2 {
     top: 418px;
-    left: 197px;
-    width: 150px;
+    left: 184px;
+    width: 160px;
 }
 
 .value-3 {
-    top: 440px;
-    left: 288px;
-    width: 114px;
+    top: 455px;
+    left: 191px;
+    width: 160px;
 }
 
 .my-go-marker {
